Added step to SeekBarPreference